<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ActivityDashboard">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28dip"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:layout_marginBottom="50dip"
        android:text="@string/judul_dashboard" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:background="@color/hijau"
        android:text="@string/btn_about" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:background="@color/biru_muda"
        android:text="@string/btn_check" />

    <Button
        android:id="@+id/btn_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:background="@color/orange"
        android:text="@string/btn_radio" />

    <Button
        android:id="@+id/btn_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:background="@color/merah_muda"
        android:text="@string/btn_calculator" />
</LinearLayout>