<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dip">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24dip"
        android:textStyle="bold"
        android:textColor="@color/biru"
        android:layout_marginBottom="10dip"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:text="@string/version" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="20dip"
        android:text="@string/paragraf" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/hijau"
        android:textColor="@color/white"
        android:text="@string/btn_kirim" />

    <Button
        android:id="@+id/btPindah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/merah"
        android:textColor="@color/white"
        android:layout_marginTop="20dip"
        android:text="@string/btn_enter" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />
</LinearLayout>